@@ -43,12 +43,13 @@ class Line(Visible):
 
     def addParallelArrow(self, pos=0.5, displace=0.3, length=0.5*pyx.unit.v_cm,
                  size=6*pyx.unit.v_pt, angle=45, constriction=0.8, sense=+1,
-                 curved=False):
+                 curved=False,stems=1,stemsep=0.03):
         """Add an arrow pointing along the line."""
         self.labels.append(ParallelArrow(self, pos=pos, displace=displace,
                                          length=length, size=size, angle=angle,
-                                         constriction=constriction,
-                                         sense=sense,curved=curved))
+                                         constriction=constriction,sense=sense,
+                                         curved=curved,stems=stems,
+                                         stemsep=stemsep))
         return self
 
             
